--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -18,7 +18,8 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="199.0" prefWidth="584.0">
                <children>
                   <TextArea fx:id="console" layoutX="11.0" layoutY="9.0" prefHeight="242.0" prefWidth="570.0" />
-                  <Button layoutX="275.0" layoutY="259.0" mnemonicParsing="false" onAction="#button" text="Close App" />
+                  <Button layoutX="194.0" layoutY="259.0" mnemonicParsing="false" onAction="#start" text="Start" />
+                  <Button layoutX="273.0" layoutY="259.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
                </children>
             </AnchorPane>
         </items>
