--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -18,8 +18,10 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="199.0" prefWidth="584.0">
                <children>
                   <TextArea fx:id="console" layoutX="11.0" layoutY="9.0" prefHeight="242.0" prefWidth="570.0" />
-                  <Button layoutX="194.0" layoutY="259.0" mnemonicParsing="false" onAction="#start" text="Start" />
-                  <Button layoutX="273.0" layoutY="259.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
+                  <Button fx:id="startbutton" layoutX="102.0" layoutY="259.0" mnemonicParsing="false" onAction="#start" text="Start" />
+                  <Button fx:id="stopbutton" layoutX="165.0" layoutY="259.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
+                  <Button fx:id="loadbutton" layoutX="231.0" layoutY="259.0" mnemonicParsing="false" onAction="#loadMapFile" text="Load Map" />
+                  <Button fx:id="solverbutton" layoutX="323.0" layoutY="260.0" mnemonicParsing="false" onAction="#loadSolver" text="Load Solver" />
                </children>
             </AnchorPane>
         </items>
