--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -2,29 +2,44 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ehu.isad.controllers.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ehu.isad.controllers.Controller">
     <children>
-        <SplitPane dividerPositions="0.38932038834951455" layoutX="6.0" layoutY="6.0" orientation="VERTICAL" prefHeight="517.0" prefWidth="590.0">
-            <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="126.0" prefWidth="560.0">
-                    <children>
-                        <Canvas fx:id="robotLayer" height="200.0" width="315.0" />
-                        <Canvas fx:id="mapLayer" height="200.0" layoutX="0.0" layoutY="0.0" width="315.0" />
-                    </children></AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="199.0" prefWidth="584.0">
-                    <children>
-                        <TextArea fx:id="console" layoutX="11.0" layoutY="9.0" prefHeight="242.0" prefWidth="570.0" />
-                        <Button fx:id="startbutton" layoutX="102.0" layoutY="259.0" mnemonicParsing="false" onAction="#start" text="Start" />
-                        <Button fx:id="stopbutton" layoutX="165.0" layoutY="259.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
-                        <Button fx:id="loadbutton" layoutX="231.0" layoutY="259.0" mnemonicParsing="false" onAction="#loadMapFile" text="Load Map" />
-                        <Button fx:id="solverbutton" layoutX="323.0" layoutY="260.0" mnemonicParsing="false" onAction="#loadSolver" text="Load Solver" />
-                    </children>
-                </AnchorPane>
-            </items>
-        </SplitPane>
+      <VBox prefHeight="525.0" prefWidth="600.0">
+         <children>
+              <SplitPane dividerPositions="0.38932038834951455" orientation="VERTICAL" prefHeight="513.0" prefWidth="584.0">
+                  <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="126.0" prefWidth="560.0">
+                          <children>
+                              <Canvas fx:id="robotLayer" height="200.0" width="315.0" />
+                              <Canvas fx:id="mapLayer" height="200.0" layoutX="0.0" layoutY="0.0" width="315.0" />
+                          </children>
+                  </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="199.0" prefWidth="584.0">
+                          <children>
+                              <TextArea fx:id="console" layoutX="11.0" layoutY="9.0" prefHeight="242.0" prefWidth="570.0" />
+                              <Button fx:id="btnStart" layoutX="102.0" layoutY="259.0" mnemonicParsing="false" onAction="#start" text="Start" />
+                              <Button fx:id="btnStop" layoutX="165.0" layoutY="259.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
+                              <Button fx:id="loadbutton" layoutX="231.0" layoutY="259.0" mnemonicParsing="false" onAction="#loadMapFile" text="Load Map" />
+                              <Button fx:id="solverbutton" layoutX="323.0" layoutY="260.0" mnemonicParsing="false" onAction="#loadSolver" text="Load Solver" />
+                          </children>
+                      </AnchorPane>
+                  </items>
+              </SplitPane>
+            <AnchorPane prefHeight="30.0" prefWidth="600.0">
+               <children>
+                  <Label text="Mapa:" />
+                  <Label fx:id="lblMapa" layoutX="49.0" prefHeight="17.0" prefWidth="119.0" />
+                  <Label layoutX="247.0" text="Solver" />
+                  <Label fx:id="lblSolver" layoutX="320.0" prefHeight="17.0" prefWidth="146.0" />
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
     </children>
 </AnchorPane>
